--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
                     <p>Created a microservices architecture using Docker and Kubernetes for improved scalability and fault tolerance.</p>
                     <a href="#" class="btn">View Project</a>
                 </div>
+		 <div class="project">
+                    <h3>Containerized Microservices Architecture</h3>
+                    <p>Created a microservices architecture using Docker and Kubernetes for improved scalability an>
+                    <a href="#" class="btn">View Project</a>
+                </div>
             </div>
         </div>
     </section>
