--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                     <a href="#" class="btn">View Project</a>
                 </div>
 		 <div class="project">
-                    <h3>Containerized Microservices Architecture</h3>
-                    <p>Created a microservices architecture using Docker and Kubernetes for improved scalability an>
+                    <h3>This is Olaitan Project Section</h3>
+                    <p>I forked achiever project and created a branch where i modifed this section an>
                     <a href="#" class="btn">View Project</a>
                 </div>
             </div>
